--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 * {
-      box-sizing: border-box;
-      -moz-box-sizing: border-box;
+      margin: 0px
+      padding: 0px
     }
     body {
       color: #000;
@@ -8,50 +8,26 @@
       font-size: 13px;
       background-color: #fff;
       margin: auto;
-      padding: .5in;
-      max-width: 7in;
       text-align: justify;
     }
-    .view {
-      width: 5in;
-      height: 5in;
-      margin: auto;
-    }
-    #c {
-      position: fixed;
-      left: 0px; top: 0px;
-      width: 100%;
-      height: 100%;
-      background-color: #fff;
-      z-index: -1;
-    }
+
+
     #info {
-      position: absolute;
-      top: 0px; width: 6.5in;
-      padding: 0px;
-      text-align: center;
-    }
-    a { color: #0080ff; }
-    .math {
-      text-align: center;
-    }
-    .math-frac {
-      display: inline-block;
-      vertical-align: middle;
-    }
-    .math-num {
-      display: block;
-    }
-    .math-denom {
-      display: block;
-      border-top: 1px solid;
-    }
-    .math-sqrt {
-      display: inline-block;
-      transform: scale(1, 1.3);
-    }
-    .math-sqrt-stem {
-      display: inline-block;
-      border-top: 1px solid;
-      margin-top: 5px;
-    }
+	position: absolute;
+	top: 10px;
+	width: 100%;
+	text-align: center;
+	z-index: 100;
+	display:block;
+  font-size: 2em;
+}
+
+#volume{
+position: absolute;
+top: 45px;
+width: 100%;
+text-align: center;
+z-index: 100;
+display:block;
+font-size: 1.2em;
+}
